Images, main content, and footer now all adjust correctly on mobile with @media tags

--- a/src/style.css
+++ b/src/style.css
@@ -361,6 +361,7 @@ a {
   color: var(--light-blue);
   font-weight: bold;
   text-decoration: underline;
+  width: auto;
 }
 
 /* Style links to different websites */
@@ -395,7 +396,7 @@ img {
   border-color: var(--dark-blue);
   max-width: 100%;
   margin: auto;
-  width: 60%;
+  width: auto;
   perspective: 1px;
 }
 
@@ -418,6 +419,12 @@ img {
   border-width: 0px;
 }
 
+@media (max-width: 600px) {
+  .pixel-footer {
+    width: 200%;
+  }
+}
+
 .badge {
   border-width: 0px;
   margin: 3px;
@@ -426,24 +433,6 @@ img {
 }
 
 /* Header */
-
-/* ~~USE MEDIA QUERIES TO MAKE SIZES CHANGE DEPENDING ON THE SIZE OF THE VIEWPORT!! */
-
-/* Styles for screens larger than 768px
-@media (min-width: 768px) {
-    .element {
-        background-color: green;
-        font-size: 18px;
-    }
-} */
-
-/* Styles for screens smaller than 768px */
-/* @media (max-width: 768px) {
-    .element {
-        background-color: red;
-        font-size: 14px;
-    }
-} */
 
 .global-wrapper {
   margin: var(--spacing-0) auto;
@@ -472,6 +461,7 @@ img {
 @media (max-width: 600px) {
   .global-header {
     height: 160px;
+    margin-bottom: 10px;
   }
 }
 
@@ -545,16 +535,34 @@ img {
   height: 150px;
 }
 
+@media (max-width: 600px) {
+  .filler-150px {
+    height: 10px;
+  }
+}
+
 .filler-100px {
   height: 100px;
 }
 
+@media (max-width: 600px) {
+  .filler-100px {
+    height: 40px;
+  }
+}
+
 #content {
-  width: 50%;
+  width: 700px;
   margin: 0 auto; /* Center Div */
   padding-left: 10px;
   padding-right: 10px;
   padding-top: 1px;
+}
+
+@media (max-width: 850px) {
+  #content {
+    width: 95%;
+  }
 }
 
 .global-footer {
@@ -566,6 +574,12 @@ img {
   left: 0;
   right: 0;
   text-align: center; /* Center content horizontally */
+}
+
+@media (max-width: 600px) {
+  .global-footer {
+    height: 10px;
+  }
 }
 
 .main-heading {
